examples/negative/ffi/extern_array_kaikai_type.kai
# Negative fixture (#536 / FFI surface validation): an `extern "C"
# fn` declaration uses a kaikai-only type (`[Int]`, the linked-list
# type) as its return shape. C has no notion of `List[T]`; the
# emitted FFI wrapper has an implementation-defined return layout
# that the C side cannot consume. Parser must reject FFI signatures
# whose surface types do not map cleanly to the C ABI. The allowlist
# is intentionally narrow (Int, Real, Bool, String, Unit on return).

extern "C" fn list_int() : [Int] / Ffi

fn main() : Int / Ffi = {
  let _ = list_int()
  0
}
